--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,19 @@ language: node_js
 node_js:
   - "stable"
 cache:
+  yarn: true
   directories:
-    - "$HOME/.npm"
+    - node_modules
 install:
-  - npm install nyc -g
-  - npm install jest -g
-  - npm install typescript -g
-  - npm install
+  - yarn global add nyc
+  - yarn global add jest
+  - yarn global add typescript
+  - yarn install
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
 script:
-  - nyc --reporter=lcov npm run test
+  - nyc --reporter=lcov yarn test
 after_script:
   - ./cc-test-reporter after-build
