--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
-    "node-fetch": "^2.6.1",
-    "nyc": "^15.1.0"
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
