--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "scripts": {
     "run:dev": "nodemon -r dotenv/config dist/index.js",
     "build:dev": "tsc --watch --preserveWatchOutput",
-    "develop": "concurrently \\\"yarn:build:dev\\\" \\\"yarn:run:dev\\\"",
-    "start": "node dist/index.js",
+    "start": "concurrently \\\"yarn:build:dev\\\" \\\"yarn:run:dev\\\"",
     "test": "jest --setupFiles --runInBand --coverage"
   },
   "dependencies": {
